# Python-project-template

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
configs/: configuration.yml
src/Back/Exceptions/: exceptions.py
src/Back/Logging/: logging.py
src/Front/Exceptions/: exceptions.py
src/Front/Logging/: logging.py
